fix overflow

--- a/src/globals.css
+++ b/src/globals.css
@@ -57,3 +57,7 @@ a {
 .nitropay {
 	margin: 5vh auto;
 }
+
+html {
+	overflow: hidden !important;
+}
